Change ingress input date to avoid TTL race, cleanup warnings, remove...